Restore selection events for autofill popup menu

In a menu, ChromeVox expects selection events, not focus events. Other
screen readers can use either type events. Therefore, we should revert
to using selection events in the Autofill popup.

TBR=estade@chromium.org

Bug: 848297
Change-Id: I8642a6b1889ae05972b71009a3f7df3f422ec02d
Reviewed-on: https://chromium-review.googlesource.com/1085273
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564196}
Former-commit-id: ccc90b0f9fe600a119c3a592df18c1b28655c3c1