chrome/browser/ui/views/autofill/autofill_popup_view_native_views.cc
@@ -338,7 +338,7 @@ void AutofillPopupRowView::SetSelected(bool is_selected) {
     return;
 
   is_selected_ = is_selected;
-  NotifyAccessibilityEvent(ax::mojom::Event::kFocus, true);
+  NotifyAccessibilityEvent(ax::mojom::Event::kSelection, true);
   RefreshStyle();
 }
 
